# SOZONE

./: .gitignore  000_QuickLookTemplate.ipynb  Forcing_familiarization.ipynb  Mapping_scratchpad.ipynb  README.md  README.txt  environment.yml  mapfxn.py  template.ipynb
.ipynb_checkpoints/: README-checkpoint.txt
BallastingCael/: ObsToGrid_JoeExample.ipynb  extractCaelCorrPointsFromModel.ipynb
C14/: ferretscript.yaml  make_c14gradient.jnl  make_verticalgradient.ipynb  recreateCLQ-c14ferret.ipynb  symlinkGEA1-1940-1983-to-C405.py  whyIsC14notInitializingPast1985.ipynb
DEBUG/: EXP_in_BoB.ipynb  Why_crash.ipynb  co2-c14-problem.ipynb  debug_2056_crash-1AS7.ipynb  debug_2056_crash.ipynb  debug_2ASA.ipynb
DanXarray/: xarray-examples-clean.ipynb
EVAL_forcing/: Forcing_checkwehave.ipynb  Make_symlinks.ipynb  Mapping_scratchpad.ipynb  QAQC_met_forcing.ipynb  STEPA_Forcing_checkwehave.ipynb  STEPB_Make_symlinks.ipynb  STEPC_check_model_compatibleformat.ipynb  Scenario_forcing_availability_and_some_means.ipynb  by_latitude_forcing_comparison.ipynb  wind_climatology_maps.ipynb  wind_zonal_avgs.ipynb
EVAL_output/: EXPLORE_SOCAT.ipynb  GLODAPv2021comparison_pipeline.ipynb  README.md  Untitled.ipynb  WOA_comparison_scratch.ipynb  make_readme.py  (+1 more)
MaiInternship/region-plots-main/: .gitignore  pyproject.toml
MaiInternship/region-plots-main/test_script/: GLODAP.ipynb  GLODAP_1.ipynb  SAL_reg.ipynb  TOM12_TJ_GEA0_map.ipynb  obs_mld_region_compare.ipynb  region_mask.ipynb  surfece_reg.ipynb  t1_data_map.ipynb  test_1.ipynb  test_2.ipynb  test_model_reg.ipynb  test_region.ipynb
(+433 files in other folders)
