[tool.poetry]
name = "mai-workspace"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mai_workspace"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.2"
xarray = "0.21.1"
matplotlib = "^3.7.1"
python-language-server = {extras = ["all"], version = "^0.36.2"}
netcdf4 = "^1.6.4"
h5netcdf = "^1.2.0"
dask = "^2023.6.1"
cmocean = "^3.0.3"
seawater = "^3.3.4"
numpy = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
